# hs-backend

./: .gitignore  AGENTS.md  Makefile  Procfile  main.py  nixpacks.toml  pyproject.toml
auth/: api_v1.py  apps.py  jwt_tokens.py  schemas.py  security.py  services.py
auth/tests/: test_auth_api.py  test_pagechecker_auth.py  test_services.py
backend/: apps.py  email_services.py  settings.py  urls.py
backend/tests/: test_bearer_or_api_key_auth.py  test_create_personal_api_key.py  test_delete_personal_api_key.py  test_delete_user.py  test_email_services.py  test_fun_get_joke.py  test_jwt_access_bearer.py  test_list_personal_api_keys.py  test_migrate_sqlite_dump_includes_soft_deleted.py  test_protected_api_auth.py  test_register_user.py
docs/: background-scheduler-research.md
fun/: api_v1.py  schemas.py  services.py
groceries/: admin.py  api_v1.py  apps.py  gemini_service.py  models.py  product_list_search.py  scheduled_tasks.py  schemas.py  services.py  url_page_context.py
groceries/migrations/: 0001_initial.py  0002_product_name_case_insensitive_unique.py  0002_remove_product_last_bought_at.py  0003_product_details.py  0003_purchase.py  0004_product_brand_price_format.py  0005_product_original_name.py  0006_rename_purchase_to_basket.py  0007_basket_owner.py  0008_product_standard_name.py  0009_product_image_url.py  0010_product_emoji_remove_image_url.py  0011_product_price_decimal_remove_details.py  0012_basket_total.py  0012_product_is_custom.py  0013_remove_basket_total.py  0013_remove_product_original_name.py  0014_product_associated_user_fk.py  0014_product_associated_users.py  0014_product_user_fk.py  0015_backfill_product_user_shelo.py  0016_alter_product_user_related_name.py  0017_remove_product_groceries_product_name_lower_uniq.py  0018_product_user_required.py  0019_product_purchase_count.py  0020_userwhiteboard.py  0020_whiteboard.py  0021_merchant.py  0022_merchant_preference_order.py  0023_product_running_low.py  0024_daily_running_low_schedule.py  0025_basketproduct_purchase.py  0026_product_deleted_at.py  0027_product_price_nullable.py  0028_search.py  0029_search_create_at.py  0030_rename_search_create_at_to_created_at.py  (+28 more)
manga/: admin.py  api_v1.py  apps.py  drive_oauth_admin_views.py  drive_picker_admin_views.py  google_drive_service.py  mangabaka_client.py  models.py  scheduled_tasks.py  schemas.py  services.py  signals.py
markdown/: admin.py  api_v1.py  apps.py  models.py  schemas.py  services.py
pagechecker/: admin.py  api_v1.py  apps.py  gemini_service.py  html_utils.py  models.py  scheduled_tasks.py  schemas.py  services.py  tasks.py
savings/: admin.py  api_v1.py  apps.py  gemini_service.py  models.py  scheduled_tasks.py  schemas.py  services.py
(+170 files in other folders)
